--- a/basic-html.html
+++ b/basic-html.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="eng">
+<html lang="en">
     <head>
         <metacharset=utf-8">
         <tile> Title Here </title>
