--- a/basic-html.html
+++ b/basic-html.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <tile> Title Here </title>
+        <title> Title Here </title>
     </head>
 
     <body>
