--- a/basic-html.html
+++ b/basic-html.html
@@ -7,7 +7,13 @@
     </head>
 
     <body>
-        <h1> Header </h1>
-        <p> Content goes here. </p>
+        <h1> Links </h1>
+        <p> 
+            <a href="https://www.google.com">Google</a>
+         </p>
+
+<p>
+    This link goes to <a href="https://www.google.com">Amazon</a>.
+
     </body>
 </html>
