--- a/basic-html.html
+++ b/basic-html.html
@@ -13,7 +13,7 @@
          </p>
 
 <p>
-    This link goes to <a href="https://www.google.com">Amazon</a>.
+    This link goes to <a href="https://www.amazon.com">Amazon</a>.
 
     </body>
 </html>
