--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -10,6 +10,10 @@
         <h2>Kaitlyn Kushner</h2>
         <h3>900 South Crouse Ave, Syracuse, NY 13244</h3>
         <p>
+            <a href="mailto:kmkushne@syr.edu">Kaitlyn Kushner Email</a>
+        </p>
+        <p>
+            <img src="LinkedIn Logo.png" alt="LinkedIn Logo">
             <a href="www.linkedin.com/in/kaitlynkushner"target="_blank">My LinkedIn Profile</a>
         </p>
     </body>
