--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -7,8 +7,8 @@
 
     <body>
         <h1>Contact</h1>
-        <h2>Kaitlyn Kushner</h2>
-        <h3>900 South Crouse Ave, Syracuse, NY 13244</h3>
+        Kaitlyn Kushner
+        900 South Crouse Ave, Syracuse, NY 13244
         <p>
             <a href="mailto:kmkushne@syr.edu">Kaitlyn Kushner Email</a>
         </p>
@@ -16,6 +16,7 @@
             <img src="LinkedIn Logo.png" alt="LinkedIn Logo">
             <a href="www.linkedin.com/in/kaitlynkushner"target="_blank">My LinkedIn Profile</a>
         </p>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2915.6238585955443!2d-76.138055!3d43.049344999999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f3a5e0952113%3A0xa671279445418b15!2s820-900%20S%20Crouse%20Ave%2C%20Syracuse%2C%20NY%2013210!5e0!3m2!1sen!2sus!4v1757534668786!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </body>
     
     </html>
