--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -8,9 +8,11 @@
     <body>
         <h1>Contact</h1>
         Kaitlyn Kushner
-        900 South Crouse Ave, Syracuse, NY 13244
         <p>
-            <a href="mailto:kmkushne@syr.edu">Kaitlyn Kushner Email</a>
+            900 South Crouse Ave, Syracuse, NY 13244
+        </p>
+        <p>
+            <a href="mailto:kmkushne@syr.edu">kmkushne@syr.edu</a>
         </p>
         <p>
             <img src="LinkedInLogo.png" alt="LinkedIn Logo">
