--- a/lab04/skills.html
+++ b/lab04/skills.html
@@ -4,10 +4,15 @@
     <head>
         <meta charset="utf-8">
         <title> Skills </title>
+        <style>
+            table, th, td {border: 1 px solid black;}
+        </style>
     </head>
 
     <body>
         <p> 
+            <h1></h1>
+            <table>
             <caption>Video Skills</caption>
             <tr>
                 <th>Category</th>
@@ -59,6 +64,7 @@
                <td>Adobe Photoshop</td>
                <td>Intermediate</td>
             </tr>
+            </table>
          </p>
     </body>
 </html>
