--- a/lab04/contact.html
+++ b/lab04/contact.html
@@ -33,7 +33,7 @@
                 <input type="radio" id="option3" name="option" value="maybe"
                 <label for="option3">Maybe</label><br>
 
-                <label for="comments">Additional Information: </label>
+                <label for="comments">Additional Information: </label><br>
                 <textarea id="comments" name="comments" rows="4" cols="50">
                     Lorem Ipsum.
                 </textarea>
