--- a/lab04/contact.html
+++ b/lab04/contact.html
@@ -25,18 +25,18 @@
                 <label for="fname">Email: </label><br>
                 <input type="text" id="fname" name="fname"><br>
 
-                <p>Would you like to receive emails?</p>
+                <p>Would you like to receive emails?
                 <input type="radio" id="option1" name="option" value="yes"
                 <label for="option1">Yes</label><br>
                 <input type="radio" id="option2" name="option" value="no"
                 <label for="option2">No</label><br>
                 <input type="radio" id="option3" name="option" value="maybe"
-                <label for="option3">Maybe</label><br>
+                <label for="option3">Maybe</label></p><br>
 
-                <label for="comments">Additional Information: </label><br>
+                <p><label for="comments">Additional Information: </label><br>
                 <textarea id="comments" name="comments" rows="4" cols="50">
                     Lorem Ipsum.
-                </textarea>
+                </textarea></p>
 
                 <input type="submit" value="sendform"> 
             </form>
