--- a/lab04/contact.html
+++ b/lab04/contact.html
@@ -26,11 +26,11 @@
                 <input type="text" id="fname" name="fname"><br>
 
                 <p>Would you like to receive emails?</p>
-                <input type="radio" id="option1" name="option" value="yes"
+                <input type="radio" id="option1" name="option" value="yes">
                 <label for="option1">Yes</label><br>
-                <input type="radio" id="option2" name="option" value="no"
+                <input type="radio" id="option2" name="option" value="no">
                 <label for="option2">No</label><br>
-                <input type="radio" id="option3" name="option" value="maybe"
+                <input type="radio" id="option3" name="option" value="maybe">
                 <label for="option3">Maybe</label><br>
 
                 <p><label for="comments">Additional Information: </label><br>
