--- a/lab04/skills.html
+++ b/lab04/skills.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <title> Skills </title>
         <style>
-            table, th, td {border: 1px black;}
+            table, th, td {border: 1 px solidblack;}
         </style>
     </head>
 
