--- a/lab06/skills.html
+++ b/lab06/skills.html
@@ -6,6 +6,7 @@
         <title> Skills </title>
         <style>
             table, th, td {border: 1px solid black;}
+            .evenrow {background-color: darkkhaki;}
         </style>
     </head>
 
@@ -17,7 +18,7 @@
                 <th>Skill</th>
                 <th>Competency Level</th>
             </tr>
-            <tr>
+            <tr class="evenrow">
                <td>Video Pre-production</td>
                <td>Development</td>
                <td>Advanced</td>
@@ -27,7 +28,7 @@
                <td>Logistics</td>
                <td>Advanced</td>
             </tr>
-            <tr>
+            <tr class="evenrow">
                <td>Video Pre-production</td>
                <td>Financing</td>
                <td>Advanced</td>
@@ -37,7 +38,7 @@
                <td>Sony Camera Operation</td>
                <td>Intermediate</td>
             </tr>
-            <tr>
+            <tr class="evenrow">
                 <td>Video Production</td>
                <td>Canon Camera Operation</td>
                <td>Intermediate</td>
@@ -47,7 +48,7 @@
                <td>Lighting and Sound</td>
                <td>Intermediate</td>
             </tr>
-            <tr>
+            <tr class="evenrow">
                 <td>Video Post-production</td>
                <td>Adobe Premiere Pro</td>
                <td>Advanced</td>
@@ -57,7 +58,7 @@
                <td>Adobe After Effects</td>
                <td>Advanced</td>
             </tr>
-            <tr>
+            <tr class="evenrow">
                 <td>Video Post-production</td>
                <td>Adobe Photoshop</td>
                <td>Intermediate</td>
