--- a/lab06/skills.html
+++ b/lab06/skills.html
@@ -4,10 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title> Skills </title>
-        <style>
-            table, th, td {border: 1px solid black;}
-            .evenrow {background-color: darkkhaki;}
-        </style>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
