--- a/lab06/skills.html
+++ b/lab06/skills.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <title> Skills </title>
         <link rel="stylesheet" href="styles.css">
+        table, th, td {border: 1px solid black}
     </head>
 
     <body>
