--- a/lab06/skills.html
+++ b/lab06/skills.html
@@ -4,8 +4,10 @@
     <head>
         <meta charset="utf-8">
         <title> Skills </title>
+        <style>
+            table, th, td {border: 1px solid black;}
+        </style>
         <link rel="stylesheet" href="styles.css">
-        table, th, td {border: 1px solid black}
     </head>
 
     <body>
