--- a/lab07/skills.html
+++ b/lab07/skills.html
@@ -11,6 +11,11 @@
     </head>
 
     <body>
+        <nav>
+                <a href="https://kmkushne-su.github.io/ist263/lab07/"> Home |</a>
+                <a href="https://kmkushne-su.github.io/ist263/lab07/skills.html"> Skills |</a>
+                <a href="https://kmkushne-su.github.io/ist263/lab07/contact.html"> Contact </a>
+        </nav>
             <table>
             <caption>Video Skills</caption>
             <tr>
