--- a/lab07/contact.html
+++ b/lab07/contact.html
@@ -7,6 +7,11 @@
     </head>
 
     <body>
+        <nav>
+                <a href="https://kmkushne-su.github.io/ist263/lab07/"> Home |</a>
+                <a href="https://kmkushne-su.github.io/ist263/lab07/skills.html"> Skills |</a>
+                <a href="https://kmkushne-su.github.io/ist263/lab07/contact.html"> Contact </a>
+        </nav>
         <h1 class="h1">Contact</h1>
         Kaitlyn Kushner
         <p>
