--- a/lab07/index.html
+++ b/lab07/index.html
@@ -7,6 +7,11 @@
     </head>
 
     <body>
+        <nav>
+                <a href="https://kmkushne-su.github.io/ist263/lab07/"> Home |</a>
+                <a href="https://kmkushne-su.github.io/ist263/lab07/skills.html"> Skills |</a>
+                <a href="https://kmkushne-su.github.io/ist263/lab07/contact.html"> Contact </a>
+        </nav>
         <p>
             <img src="../Images/KaitlynKushnerBanner.png" alt="Kaitlyn Kushner's Portfolio Banner">
         </p>
