--- a/lab08/index.html
+++ b/lab08/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>Kaitlyn Kushner - Bio</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .quote1 {float: right;}
+    </style>
     </head>
 
     <body>
@@ -13,9 +16,12 @@
                 <a href="https://kmkushne-su.github.io/ist263/lab07/contact.html"> Contact </a>
         </nav>
         <p>
+            <header>
             <img src="../Images/KaitlynKushnerBanner.png" alt="Kaitlyn Kushner's Portfolio Banner">
+            </header>
         </p>
         <h1>Kaitlyn Kushner's Biography</h1>
+        <main>
         <p>
         My name is Kaitlyn Kushner and I am <strong>a passionate audio-visual storyteller</strong> based in the New York and Cincinnati areas. 
         </p>
@@ -27,6 +33,7 @@
         <p>
         Outside of work, I enjoy hiking, listening to music, exploring, and (most importantly) spending time with loved ones. I love to meet new people and stay connected! Feel free to reach out at kaitlynkushner1@gmail.com
         </p>
+        </main>
 
         <h2>Skills</h2>
         <p>
@@ -36,8 +43,11 @@
                 <li>Adobe Photoshop</li>
                 <li>Adobe Illustrator</li>
             </ul>
-        <hr>
+       <footer>
+            <hr>
         &copy; 2025
+            <span class="quote1"> "We must engage with complexity via creative solutions." - Kaitlyn Kushner </span>
+        </footer>
     </body>
     
     </html>
