--- a/project05/index.html
+++ b/project05/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <nav>
-                <a href="https://kmkushne-su.github.io/ist263/project05/index.html/"> Home |</a>
+                <a href="https://kmkushne-su.github.io/ist263/project05/index.html"> Home |</a>
                 <a href="https://kmkushne-su.github.io/ist263/project05/communications.html"> Communications |</a>
                 <a href="https://kmkushne-su.github.io/ist263/projcet05/video.html"> Video </a>
         </nav>
