--- a/project05/video.html
+++ b/project05/video.html
@@ -9,6 +9,18 @@
         </style>
     </head>
     <body>
-
+        <nav>
+                <a href="https://kmkushne-su.github.io/ist263/project05/index.html"> Home |</a>
+                <a href="https://kmkushne-su.github.io/ist263/project05/communications.html"> Communications |</a>
+                <a href="https://kmkushne-su.github.io/ist263/projcet05/video.html"> Video </a>
+        </nav>
+        <p>Throughout my career, I have worked with a plethora of different clients with specifically tailored audio-visual needs. Ranging from non-profits, educational institutions, and more, my diverse set of experiences allow me to provide intricate forethought, careful production, and adaptable post-production and distribution skills to the table.</p>
+        <h1>Director of the Film Team at the Dynamic Sustainability Lab</h1>
+        <p>As the in-house videographer at the Syracuse University Maxwell School’s Dynamic Sustainability Lab, I develop, produce, and distribute all the Lab’s audio-visual work. See my sample video work above and watch more on our YouTube page: <a href="https://www.youtube.com/@DynamicSustainabilityLab/videos">The Dynamic Sustainability Lab.</a> </p>
+        <h1>Director of Communications at Circle Tail</h1>
+        <p>As the Director of Communications for Circle Tail, I developed, produced, and distributed all of Circle Tail’s audio-visual work. See my sample video work above and visit our social media page for more information: <a href="https://www.instagram.com/circletailinc/?hl=en">Circle Tail Instagram (@circletailinc).</a></p>
+        <h1>Your Good Name and Your Family</h1>
+        <p>For my Senior Capstone and Honor’s Thesis project, I am developing a documentary piece titled Your Good Name and Your Family. This piece details the life of my Great Uncle, who fought and was killed in WWII. Stay tuned to watch the trailer in December 2025 and the final project in Spring 2026 here!</p>
+        <p>&copy;</p>
     </body>
 </html>
