--- a/lab10/skills.html
+++ b/lab10/skills.html
@@ -3,6 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" contet="width=device-width, intial-scale=1.0">
         <title> Skills </title>
         <style>
             table, th, td {border: 1px solid black;}
