--- a/lab10/contact.html
+++ b/lab10/contact.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" contet="width=device-width, intial-scale=1.0">
         <style>
             .contact {display: flex; background-color: #83adb5; border-radius: 10px;}
             .mapandform {display: flex; background-color: #83adb5; border-radius: 10px;}
