--- a/lab10/index.html
+++ b/lab10/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
     <meta charset="utf-8">
+    <meta name="viewport" contet="width=device-width, intial-scale=1.0">
     <title>Kaitlyn Kushner - Bio</title>
     <link rel="stylesheet" href="styles.css">
     <style>
