--- a/lab10/index.html
+++ b/lab10/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <style>
         .quote1 {float: right;}
+        .bannerimage {max-width: 100%;}
     </style>
     </head>
 
@@ -18,7 +19,7 @@
         </nav>
         <p>
             <header>
-            <img src="../Images/KaitlynKushnerBanner.png" alt="Kaitlyn Kushner's Portfolio Banner">
+            <img class="bannerimage" src="../Images/KaitlynKushnerBanner.png" alt="Kaitlyn Kushner's Portfolio Banner">
             </header>
         </p>
         <h1>Kaitlyn Kushner's Biography</h1>
