--- a/lab10/contact.html
+++ b/lab10/contact.html
@@ -5,9 +5,7 @@
         <meta name="viewport" contet="width=device-width, intial-scale=1.0">
         <style>
             .contact {display: flex; background-color: #83adb5; border-radius: 10px;}
-            .mapandform {display: flex; background-color: #83adb5; border-radius: 10px;}
-
-        
+            .mapandform {display: flex; background-color: #83adb5; border-radius: 10px; flex-wrap: wrap;}
             .myname {padding: 2em; margin: 2em;}
             .myemail {padding: 2em; margin: 2em;}
             .myform {order: 1; padding: 2em; margin: 2em;}
