--- a/lab10/index.html
+++ b/lab10/index.html
@@ -13,8 +13,8 @@
 
     <body>
         <nav>
-                <a href="https://kmkushne-su.github.io/ist263/lab10/"> Home |</a>
-                <a href="https://kmkushne-su.github.io/ist263/lab10/skills.html"> Skills |</a>
+                <a href="https://kmkushne-su.github.io/ist263/lab10/"> Home <span>|</span></a>
+                <a href="https://kmkushne-su.github.io/ist263/lab10/skills.html"> Skills <span>|</span></a>
                 <a href="https://kmkushne-su.github.io/ist263/lab10/contact.html"> Contact </a>
         </nav>
         <p>
