--- a/lab10/index.html
+++ b/lab10/index.html
@@ -13,9 +13,9 @@
 
     <body>
         <nav>
-                <a href="https://kmkushne-su.github.io/ist263/lab10/"> Home <span>|</span></a>
-                <a href="https://kmkushne-su.github.io/ist263/lab10/skills.html"> Skills <span>|</span></a>
-                <a href="https://kmkushne-su.github.io/ist263/lab10/contact.html"> Contact </a>
+                <a href="https://kmkushne-su.github.io/ist263/lab10/" class="mylink"> Home <span>|</span></a>
+                <a href="https://kmkushne-su.github.io/ist263/lab10/skills.html" class="mylink"> Skills <span>|</span></a>
+                <a href="https://kmkushne-su.github.io/ist263/lab10/contact.html" class="mylink"> Contact </a>
         </nav>
         <p>
             <header>
