--- a/lab10/skills.html
+++ b/lab10/skills.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" contet="width=device-width, intial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> Skills </title>
         <style>
             table, th, td {border: 1px solid black;}
@@ -19,8 +19,8 @@
 
     <body>
         <nav>
-                <a href="https://kmkushne-su.github.io/ist263/lab10/"> Home |</a>
-                <a href="https://kmkushne-su.github.io/ist263/lab10/skills.html"> Skills |</a>
+                <a href="https://kmkushne-su.github.io/ist263/lab10/"> Home </a><span>|</span>
+                <a href="https://kmkushne-su.github.io/ist263/lab10/skills.html"> Skills </a><span>|</span>
                 <a href="https://kmkushne-su.github.io/ist263/lab10/contact.html"> Contact </a>
         </nav>
             <h1> Video Skills </h1>
