--- a/lab10/contact.html
+++ b/lab10/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" contet="width=device-width, intial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
             .contact {display: flex; background-color: #83adb5; border-radius: 10px;}
             .mapandform {display: flex; background-color: #83adb5; border-radius: 10px; flex-wrap: wrap;}
@@ -17,8 +17,8 @@
 
     <body>
         <nav>
-                <a href="https://kmkushne-su.github.io/ist263/lab10/"> Home |</a>
-                <a href="https://kmkushne-su.github.io/ist263/lab10/skills.html"> Skills |</a>
+                <a href="https://kmkushne-su.github.io/ist263/lab10/"> Home </a><span>|</span>
+                <a href="https://kmkushne-su.github.io/ist263/lab10/skills.html"> Skills </a><span>|</span>
                 <a href="https://kmkushne-su.github.io/ist263/lab10/contact.html"> Contact </a>
         </nav>
         <h1 class="h1">Contact</h1>
