--- a/lab10/index.html
+++ b/lab10/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
     <meta charset="utf-8">
-    <meta name="viewport" contet="width=device-width, intial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kaitlyn Kushner - Bio</title>
     <link rel="stylesheet" href="styles.css">
     <style>
@@ -13,9 +13,9 @@
 
     <body>
         <nav>
-                <a href="https://kmkushne-su.github.io/ist263/lab10/" class="mylink"> Home <span>|</span></a>
-                <a href="https://kmkushne-su.github.io/ist263/lab10/skills.html" class="mylink"> Skills <span>|</span></a>
-                <a href="https://kmkushne-su.github.io/ist263/lab10/contact.html" class="mylink"> Contact </a>
+                <a href="https://kmkushne-su.github.io/ist263/lab10/"> Home </a> <span>|</span>
+                <a href="https://kmkushne-su.github.io/ist263/lab10/skills.html"> Skills </a> <span>|</span>
+                <a href="https://kmkushne-su.github.io/ist263/lab10/contact.html"> Contact </a>
         </nav>
         <p>
             <header>
