--- a/project05/communications.html
+++ b/project05/communications.html
@@ -8,6 +8,7 @@
 
         </style>
     </head>
+    <main>
     <body>
         <nav>
                 <a href="https://kmkushne-su.github.io/ist263/project05/index.html"> Home |</a>
@@ -24,6 +25,9 @@
         <h1>Director of Social Media at the Dynamic Sustainability Lab</h1>
         <img src="../projectimages/dslinstagram.png" alt="DSL Social Media Page">
         <p>In a variety of my Communications positions, I have curated multiple social media presences on a variety of platforms from scratch. The above are examples from my time at Durham Academy Summer, Circle Tail, and the Dynamic Sustainability Lab at Syracuse University. On all platforms, I grew a devoted following, increased reach on an international scale, and upgraded community engagement on a variety of fronts.</p>
+        </main>
+        <footer>
         <p>&copy;</p>
+        </footer>
     </body>
 </html>
