--- a/project05/video.html
+++ b/project05/video.html
@@ -8,6 +8,7 @@
 
         </style>
     </head>
+    <main>
     <body>
         <nav>
                 <a href="https://kmkushne-su.github.io/ist263/project05/index.html"> Home |</a>
@@ -21,6 +22,9 @@
         <p>As the Director of Communications for Circle Tail, I developed, produced, and distributed all of Circle Tail’s audio-visual work. See my sample video work above and visit our social media page for more information: <a href="https://www.instagram.com/circletailinc/?hl=en">Circle Tail Instagram (@circletailinc).</a></p>
         <h1>Your Good Name and Your Family</h1>
         <p>For my Senior Capstone and Honor’s Thesis project, I am developing a documentary piece titled Your Good Name and Your Family. This piece details the life of my Great Uncle, who fought and was killed in WWII. Stay tuned to watch the trailer in December 2025 and the final project in Spring 2026 here!</p>
+        </main>
+        <footer>
         <p>&copy;</p>
+        </footer>
     </body>
 </html>
