--- a/project05/index.html
+++ b/project05/index.html
@@ -8,6 +8,7 @@
 
         </style>
     </head>
+    <main>
     <body>
         <nav>
                 <a href="https://kmkushne-su.github.io/ist263/project05/index.html"> Home |</a>
@@ -20,6 +21,9 @@
         <p>I am a fourth-year student at Syracuse University in New York studying Television, Radio, and Film at the S.I. Newhouse School of Public Communications. I have minors in Psychology and Information and Technology Management. I am excited to use this scholastic knowledge alongside my professional and personal skills to create a more understanding and informed world. My expertise spans a variety of industries, specifically in Communications, Marketing, and Audio-visual Production. </p>
         <h1>CONTACT</h1>
         <p>I love to meet new people and stay connected! Please reach out at kaitlynkushner1@gmail.com</p>
+        </main>
+        <footer>
         <p>&copy;</p>
+        </footer>
     </body>
 </html>
