--- a/project05/index.html
+++ b/project05/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" contet="width=device-width, intial-scale=1.0">
+        <meta name="viewport" content="width=device-width, intial-scale=1.0">
         <title></title>
         <style>
 
