--- a/lab11/lab11_preview.html
+++ b/lab11/lab11_preview.html
@@ -21,7 +21,7 @@
             document.getElementById("messages").innerHTML = 'Wrong Shell - Try Again';
        }
        function ShuffleShells() {
-            document.getElementById("first").styleorder = Math.floor((Math.random() * 3) + 2);
+            document.getElementById("first").style.order = Math.floor((Math.random() * 3) + 2);
        }
     </script>
     <link rel="stylesheet" href="https://peopel-su.github.io/ist263/images/animate2.css">
