--- a/project06/communications.html
+++ b/project06/communications.html
@@ -4,8 +4,12 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, intial-scale=1.0">
         <title>Communications</title>
+        <link rel="stylesheet" href="styles.css">
         <style>
-
+            img {display: flex; padding: 1em; height: 40%; width: 40%;}
+            .instagramimage {padding: 1em; height: 30%; width: 30%;}
+            .circletailimage {float: left;}
+            .clearfloat {clear: both;}
         </style>
     </head>
     <article>
@@ -21,9 +25,12 @@
         </section>
         <section>
         <h1>Director of Communications at Circle Tail</h1>
+        <div class="circletailimage">
         <img src="../projectimages/circletailguidebook.png" alt="Circle Tail Guidebook Cover">
+        </div>
         <p>As the Director of Communications for Circle Tail, I managed both internal and external communications for the non-profit. Specific duties include content creation and publication, website design, communication with community members, photography, videography, inter-enterprise coordination, and more. During my contract, I developed the Circle Tail Communication’s guidebook, which is a handbook that intricately details all the internal communications operations for Circle Tail.</p>
         </section>
+        <div class="clearfloat"></div>
         <section>
         <h1>Director of Communications at Durham Academy Summer</h1>
         <img src="../projectimages/dasummerguidebook.png" alt="Durham Academy Summer Guidebook Cover">
@@ -31,7 +38,7 @@
         </section>
         <section>
         <h1>Director of Social Media at the Dynamic Sustainability Lab</h1>
-        <img src="../projectimages/dslinstagram.png" alt="DSL Social Media Page">
+        <img class="instagramimage" src="../projectimages/dslinstagram.png" alt="DSL Social Media Page">
         <p>In a variety of my Communications positions, I have curated multiple social media presences on a variety of platforms from scratch. The above are examples from my time at Durham Academy Summer, Circle Tail, and the Dynamic Sustainability Lab at Syracuse University. On all platforms, I grew a devoted following, increased reach on an international scale, and upgraded community engagement on a variety of fronts.</p>
         </section>
         </main>
