--- a/project06/index.html
+++ b/project06/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, intial-scale=1.0">
         <title>Home</title>
+        <link rel="stylesheet" href="styles.css">
         <style>
-            h1, p {text-align: center;}
             img {padding: 1em; height: 20%; width: 20%;}
         </style>
     </head>
