--- a/project06/video.html
+++ b/project06/video.html
@@ -13,8 +13,8 @@
     <main>
     <body>
         <nav>
-                <a href="https://kmkushne-su.github.io/ist263/project05/index.html"> Home |</a>
-                <a href="https://kmkushne-su.github.io/ist263/project05/communications.html"> Communications |</a>
+                <a href="https://kmkushne-su.github.io/ist263/project05/index.html"> Home</a> |
+                <a href="https://kmkushne-su.github.io/ist263/project05/communications.html"> Communications</a> |
                 <a href="https://kmkushne-su.github.io/ist263/project05/video.html"> Video </a>
         </nav>
         <section></section>
