--- a/project06/index.html
+++ b/project06/index.html
@@ -6,15 +6,15 @@
         <title>Home</title>
         <link rel="stylesheet" href="styles.css">
         <style>
-            img {padding: 1em; height: 20%; width: 20%;}
+            img {padding: 1em; height: 20%; width: 20%; display: block; margin: 2em auto 2em auto; background-color: #6D8196;}
         </style>
     </head>
     <article>
     <main>
     <body>
         <nav>
-                <a href="https://kmkushne-su.github.io/ist263/project05/index.html"> Home |</a>
-                <a href="https://kmkushne-su.github.io/ist263/project05/communications.html"> Communications |</a>
+                <a href="https://kmkushne-su.github.io/ist263/project05/index.html"> Home</a> |
+                <a href="https://kmkushne-su.github.io/ist263/project05/communications.html"> Communications</a> |
                 <a href="https://kmkushne-su.github.io/ist263/project05/video.html"> Video </a>
         </nav>
         <img src="../projectimages/dslheadshot.png" alt="Kaitlyn Kushner Headshot">
