--- a/project06/communications.html
+++ b/project06/communications.html
@@ -6,13 +6,9 @@
         <title>Communications</title>
         <link rel="stylesheet" href="styles.css">
         <style>
-            img {display: flex; padding: 1em; height: 30%; width: 30%;}
-            .instagramimage {float: left; padding: 1em; height: 25%; width: 25%;}
-            .circletailimage {float: left;}
-            .dasummerimage {float: left;}
-            .dsl {float: left;}
-            .nextsection {clear: both;}
-            .mytext {margin: 2em; padding: 2em;}
+            img {padding: 1em; height: 10%; width: 10%;}
+            .outercontainer {display: flex;}
+            .jobtext {justify-content: center;}
         </style>
     </head>
     <article>
@@ -29,25 +25,27 @@
 
         <section>
         <h1>Director of Communications at Circle Tail</h1>
-        <img src="../projectimages/circletailguidebook.png" alt="Circle Tail Guidebook Cover" class="circletailimage">
-        <p class="mytext">As the Director of Communications for Circle Tail, I managed both internal and external communications for the non-profit. Specific duties include content creation and publication, website design, communication with community members, photography, videography, inter-enterprise coordination, and more. During my contract, I developed the Circle Tail Communication’s guidebook, which is a handbook that intricately details all the internal communications operations for Circle Tail.</p>
-        <div class="nextsection"></div>
+        <div class="outercontainer">
+        <img src="../projectimages/circletailguidebook.png" alt="Circle Tail Guidebook Cover">
+        <p class-="jobtext">As the Director of Communications for Circle Tail, I managed both internal and external communications for the non-profit. Specific duties include content creation and publication, website design, communication with community members, photography, videography, inter-enterprise coordination, and more. During my contract, I developed the Circle Tail Communication’s guidebook, which is a handbook that intricately details all the internal communications operations for Circle Tail.</p>
+        </div>
         </section>
 
         <section>
         <h1>Director of Communications at Durham Academy Summer</h1>
-        <img src="../projectimages/dasummerguidebook.png" alt="Durham Academy Summer Guidebook Cover" class="dasummerimage">
-        <p class="mytext">As the Director of Communications for Summer Programs at Durham Academy, I managed both internal and external communications for the summer camp. Specific duties included content creation and publication, email and phone correspondence, website design, communication with camp families, writing for the camp blog, photography, videography, overseeing the Communication's Team and more. During my contract, I developed the Durham Academy Summer Communication’s guidebook, which is a handbook that intricately details all operations for the Durham Academy Summer Communications work.</p>
-        <div class="nextsection"></div>
+        <div class="outercontainer">
+        <p class-="jobtext">As the Director of Communications for Summer Programs at Durham Academy, I managed both internal and external communications for the summer camp. Specific duties included content creation and publication, email and phone correspondence, website design, communication with camp families, writing for the camp blog, photography, videography, overseeing the Communication's Team and more. During my contract, I developed the Durham Academy Summer Communication’s guidebook, which is a handbook that intricately details all operations for the Durham Academy Summer Communications work.</p>
+        <img src="../projectimages/dasummerguidebook.png" alt="Durham Academy Summer Guidebook Cover">
+        </div>
         </section>
 
         <section>
         <h1>Director of Social Media at the Dynamic Sustainability Lab</h1>
-        <img src="../projectimages/dslinstagram.png" alt="DSL Social Media Page" class="instagramimage">
-        <p class="mytext">In a variety of my Communications positions, I have curated multiple social media presences on a variety of platforms from scratch. The above are examples from my time at Durham Academy Summer, Circle Tail, and the Dynamic Sustainability Lab at Syracuse University. On all platforms, I grew a devoted following, increased reach on an international scale, and upgraded community engagement on a variety of fronts.</p>
+        <div class="outercontainer">
+        <img src="../projectimages/dslinstagram.png" alt="DSL Social Media Page">
+        <p class-="jobtext">In a variety of my Communications positions, I have curated multiple social media presences on a variety of platforms from scratch. The above are examples from my time at Durham Academy Summer, Circle Tail, and the Dynamic Sustainability Lab at Syracuse University. On all platforms, I grew a devoted following, increased reach on an international scale, and upgraded community engagement on a variety of fronts.</p>
+        </div>
         </section>
-
-        <div class="nextsection"></div>
 
         </main>
         </article>
