--- a/project06/index.html
+++ b/project06/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, intial-scale=1.0">
@@ -9,8 +9,8 @@
             img {padding: 1em; height: 20%; width: 20%; display: block; margin: 2em auto 2em auto; background-color: #6D8196;}
         </style>
     </head>
-    <article>
     <main>
+    <article>
     <body>
         <nav>
                 <a href="https://kmkushne-su.github.io/ist263/project05/index.html"> Home</a> |
