--- a/project06/video.html
+++ b/project06/video.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, intial-scale=1.0">
@@ -9,8 +9,8 @@
 
         </style>
     </head>
-    <article>
     <main>
+    <article>
     <body>
         <nav>
                 <a href="https://kmkushne-su.github.io/ist263/project05/index.html"> Home</a> |
