--- a/lab13/contact.html
+++ b/lab13/contact.html
@@ -70,6 +70,7 @@
             <h1 class="h1">Forms</h1>
             <div class="myform">
             <form action="https://formspree.io/f/mandgaow" method="POST">
+                <fieldset>
                 <label for="fname">Email: </label><br>
                 <input type="text" id="fname" name="fname"><br>
 
@@ -88,6 +89,7 @@
 
                 <input type="submit" value="sendform"> 
             </form>
+        </fieldset>
             </div>
         </div>
         </section>
