--- a/project07/index.html
+++ b/project07/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+<head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, intial-scale=1.0">
         <title>Home</title>
         <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
+    <script>
+        let slideIndex = 0;
+        showSlides();
+
+        function showSlides() {
+          let i;
+        let slides = document.getElementsByClassName("mySlides");
+        let dots = document.getElementsByClassName("dot");
+        for (i = 0; i < slides.length; i++) {
+         slides[i].style.display = "none";  
+          }
+        slideIndex++;
+        if (slideIndex > slides.length) {slideIndex = 1}    
+        for (i = 0; i < dots.length; i++) {
+        dots[i].className = dots[i].className.replace(" active", "");
+          }
+        slides[slideIndex-1].style.display = "block";  
+        dots[slideIndex-1].className += " active";
+        setTimeout(showSlides, 2000);
+        }
+    </script>
+</head>
+<body>
     <header>
         <a href="#main" class="skip">Skip to main content</a>
     <nav>
@@ -24,6 +45,23 @@
     </header>
     <main id="main">
     <article>
+        <div class="slideshow-container">
+            <div class="mySlides fade">
+            <img class="slidesimage" src="../projectimages/final_ss1.png" style="width:100%" alt="Kaitlyn Kushner directing a video production in a library">
+            </div>
+        <div class="mySlides fade">
+            <img src="../projectimages/final_ss2.png" style="width:100%" alt="Kaitlyn Kushner moving video production equipment with team">
+        </div>
+            <div class="mySlides fade">
+            <img src="../projectimages/final_ss3.png" style="width:100%" alt="Kaitlyn Kushner discussing production plans with a team member">
+            </div>
+        </div>
+        <br>
+        <div style="text-align:center">
+        <span class="dot"></span> 
+        <span class="dot"></span> 
+        <span class="dot"></span> 
+        </div>
         <img class="headshot" src="../projectimages/final_headshot.png" alt="Headshot of Kaitlyn Kushner">
         <div class="allbody">
         <section>
@@ -39,5 +77,5 @@
     <footer>
         <p>Copyright &copy; Kaitlyn Kushner 2004-2025</p>
     </footer>
-    </body>
+</body>
 </html>
