--- a/project07/communications.html
+++ b/project07/communications.html
@@ -6,6 +6,7 @@
         <title>Communications</title>
         <link rel="stylesheet" href="styles.css">
     </head>
+    <body>
     <header>
         <a href="#main" class="skip">Skip to main content</a>
     <nav>
@@ -23,29 +24,33 @@
     </header>
     <main id="main">
     <article>
-    <body>
         <div class="allbody">
         <section>
         <p>I have held a variety of positions in the Communications field, such as Director Communications at the Ohio-based non-profit, Circle Tail, and the North Carolina-based summer camp, Durham Academy Summer. As the primary point of contact for community members, I ensured seamless direction and project delivery from concept to completion. Additionally, I collaborated with a broad network of internal teams to develop and execute innovative campaigns to widen local and global reach for my clients, all while staying within budgets and timelines. I invite you to preview some of my work below.</p>
         </section>
 
         <h1>Director of Communications at Circle Tail</h1>
+        <div>
         <section>
         <div class="outercontainer">
         <img class="exampleimage" src="../projectimages/final_circletail.png" alt="Circle Tail Communications Guidebook Cover">
         <p>As the Director of Communications for Circle Tail, I managed both internal and external communications for the non-profit. Specific duties include content creation and publication, website design, communication with community members, photography, videography, inter-enterprise coordination, and more. During my contract, I developed the Circle Tail Communication’s guidebook, which is a handbook that intricately details all the internal communications operations for Circle Tail.</p>
         </div>
         </section>
+        </div>
 
         <h1>Director of Communications at Durham Academy Summer</h1>
+        <div>
         <section>
         <div class="outercontainer">
         <p>As the Director of Communications for Summer Programs at Durham Academy, I managed both internal and external communications for the summer camp. Specific duties included content creation and publication, email and phone correspondence, website design, communication with camp families, writing for the camp blog, photography, videography, overseeing the Communication's Team and more. During my contract, I developed the Durham Academy Summer Communication’s guidebook, which is a handbook that intricately details all operations for the Durham Academy Summer Communications work.</p>
         <img class="exampleimage" src="../projectimages/final_dasummer.png" alt="Durham Academy Summer Communications Guidebook Cover">
         </div>
         </section>
+        </div>
 
         <h1>Director of Social Media at the Dynamic Sustainability Lab</h1>
+        <div>
         <section>
         <div class="outercontainer">
         <img class="exampleimage" src="../projectimages/final_dsl.png" alt="Screenshot of Dynamic Sustainability Lab Social Media Home Page">
@@ -53,10 +58,11 @@
         </div>
         </section>
         </div>
-    </body>
+        </div>
     </article>
     </main>
     <footer>
         <p>Copyright &copy; Kaitlyn Kushner 2004-2025</p>
     </footer>
+    </body>
 </html>
